syntax = "proto3";

package example;

option go_package = "github.com/wores/protoc-gen-pipeline/example";

import "google/protobuf/wrappers.proto";
import "pipeline/pipeline.proto";

message StringAllExample {
  string text = 1 [
    (pipeline.processes).string = {
      trim: TrimBoth
      remove_all: "q"
      replace: {
        old: "'"
        new: "\\\""
      }
      omission: {
        len: 10
        replace: "[-]"
        position: OmissionPositionLeft
      }
    }
  ];
}

message StringTrimExample {
  string text = 1 [(pipeline.processes).string.trim = TrimLeft];
  google.protobuf.StringValue wrapText = 2 [
    (pipeline.processes).string = {
      trim: TrimBoth
    }
  ];
  repeated string texts = 3 [
    (pipeline.processes).repeated.items.string = {
      trim: TrimBoth
    }
  ];
  message Inner {
    string text = 1 [
      (pipeline.processes).string = {
        trim: TrimRight
      }
    ];
    google.protobuf.StringValue wrapText = 2 [
      (pipeline.processes).string = {
        trim: TrimBoth
      }
    ];
    repeated string texts = 3 [
      (pipeline.processes).repeated.items.string = {
        trim: TrimBoth
      }
    ];
    Inner inner = 4;
  }
  Inner inner = 4;
}

message StringRemoveExample {
  string text = 1 [(pipeline.processes).string.remove_all = "-"];
}

message StringReplaceExample {
  string text = 1 [
    (pipeline.processes).string = {
      replace: {
        old: "*"
        new: "%"
      }
    }
  ];
}

message StringOmissionExample {
  string left = 1 [
    (pipeline.processes).string = {
      omission: {
        len: 10
        replace: "…"
        position: OmissionPositionLeft
      }
    }
  ];
  string center = 2 [
    (pipeline.processes).string = {
      omission: {
        len: 10
        replace: "…"
        position: OmissionPositionCenter
      }
    }
  ];
  string right = 3 [
    (pipeline.processes).string = {
      omission: {
        len: 10
        replace: "…"
        position: OmissionPositionRight
      }
    }
  ];
}
